Fixed microbe editor pause menu  and help menu alignment, moved helpful tip code to proper location , and added similar tips to the microbe editor help menu, also i still think we should move those out of the javascript and into some kind of json file.

--- a/scripts/gui/thrive_style.css
+++ b/scripts/gui/thrive_style.css
@@ -584,13 +584,15 @@ video {
   z-index: 2;
 }
 
-#closeHelp {
+#closeHelp,
+#closeHelpEditor {
   vertical-align: middle;
   position: relative;
   margin: 0 auto;
 }
 
-#tipMsg {
+#tipMsg,
+#tipMsgEditor {
   margin-top: 40px;
   position: absolute;
   width: 100%;
